--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  # Android Toast
   fluttertoast: ^3.1.3
+  # SharedPreferences
+  shared_preferences: ^0.5.4+5
 
 dev_dependencies:
   flutter_test:
