--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,16 @@ dependencies:
   fluttertoast: ^3.1.3
   # SharedPreferences
   shared_preferences: ^0.5.4+5
+  #retrofit
+  dio: any
+  retrofit: any
+  logger: any  #for logging purpose
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  retrofit_generator: any
+  build_runner: any
 
 
 # For information on the generic Dart part of this file, see the
